[gd_scene load_steps=3 format=3 uid="uid://1xvscepm1oyg"]

[ext_resource type="Script" path="res://Maze/Controller/UI/CambiarConfiguracion.gd" id="1_v7x7n"]
[ext_resource type="Theme" uid="uid://bli0ffcjwbud6" path="res://Resources/Edit_Textures/panel_confirmacion.tres" id="2_bmmjp"]

[node name="CambiarConfiguracion" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(225, 150)
script = ExtResource("1_v7x7n")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(450, 300)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -150.0
offset_right = 225.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bmmjp")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cambiar Configuración"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModoJuego" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Modo de Interacción:"

[node name="JuegoOption" type="OptionButton" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Usuario"
popup/item_1/text = "Simulacion"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModoJuego" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Modo de Juego:"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(35, 0)
layout_mode = 2

[node name="JuegoOption" type="OptionButton" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Solitario"
popup/item_1/text = "Enfrentamiento"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModoJuego" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Algoritmo:"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(75, 0)
layout_mode = 2

[node name="AlgotirmoOption" type="OptionButton" parent="PanelContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "BFS"
popup/item_1/text = "DFS"
popup/item_1/id = 1
popup/item_2/text = "Dijkstra"
popup/item_2/id = 2
popup/item_3/text = "A star"
popup/item_3/id = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Guardar" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Guardar"

[node name="Cancelar" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Cancelar"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/Guardar" to="." method="_on_guardar_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer2/HBoxContainer/Cancelar" to="." method="_on_cancelar_pressed"]
